# pebble-tool

./: .gitignore  .gitmodules  README.md  cleantest.txt  pebble.py  plan.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: checks.yml
libpebble3-bridge/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  sync_and_build.sh
libpebble3-bridge/tests/: run-e2e-test.sh  run-full-e2e-test.sh
libpebble3-bridge/tests/pkjs-test-app/: package.json  wscript
pebble_tool/: __init__.py  account.py  firebase_account.py  version.py
pebble_tool/bridge/: __init__.py
pebble_tool/commands/: account.py  appmessage.py  base.py  data_logging.py  emucontrol.py  firmware.py  install.py  logs.py  ping.py  publish.py  screenshot.py  timeline.py
pebble_tool/commands/sdk/: __init__.py  create.py  emulator.py  manage.py
pebble_tool/commands/sdk/project/: __init__.py  build.py  compile_commands.py
pebble_tool/sdk/: __init__.py  cloudpebble.py  emulator.py  manager.py
pebble_tool/sdk/templates/: templates.json  wscript
pebble_tool/sdk/templates/app/: README.md  ai.md  package.json
pebble_tool/sdk/templates/lib/: README.md  package.json
pebble_tool/util/: __init__.py  analytics.py  browser.py  config.py  npm.py  update_notify.py  updates.py  xsbug.py
tests/: e2e-test.sh  test_account_command.py  test_firebase_account.py  test_publish_command.py  test_send_appmessage_command.py  test_smoke_pebble_tool.py  test_utils.py
tests/e2e/: e2e_results.json
tests/e2e/pkjstestharness/: .lock-waf_darwin_build
(+14 files in other folders)
